wip: post /appointments added test to create new appointment
