# app/controllers/api/v1/users_controller.rb
@@ -1,51 +1,20 @@
 class Api::V1::UsersController < ApplicationController
-  before_action :set_api_v1_user, only: [:show, :update, :destroy]
-
-  # GET /api/v1/users
-  def index
-    @api_v1_users = Api::V1::User.all
-
-    render json: @api_v1_users
+  before_action :get_appointment, only: [:appointments, :appointment]
+  
+  def appointments
+    json_response(@user_with_appointment.all_appointments)    
+  end
+  
+  def appointment
+    json_response(@user_with_appointment
+      .all_appointments
+      .find(params[:id]))
   end
 
-  # GET /api/v1/users/1
-  def show
-    render json: @api_v1_user
-  end
-
-  # POST /api/v1/users
-  def create
-    @api_v1_user = Api::V1::User.new(api_v1_user_params)
-
-    if @api_v1_user.save
-      render json: @api_v1_user, status: :created, location: @api_v1_user
-    else
-      render json: @api_v1_user.errors, status: :unprocessable_entity
-    end
-  end
-
-  # PATCH/PUT /api/v1/users/1
-  def update
-    if @api_v1_user.update(api_v1_user_params)
-      render json: @api_v1_user
-    else
-      render json: @api_v1_user.errors, status: :unprocessable_entity
-    end
-  end
-
-  # DELETE /api/v1/users/1
-  def destroy
-    @api_v1_user.destroy
-  end
 
   private
     # Use callbacks to share common setup or constraints between actions.
-    def set_api_v1_user
-      @api_v1_user = Api::V1::User.find(params[:id])
-    end
-
-    # Only allow a trusted parameter "white list" through.
-    def api_v1_user_params
-      params.fetch(:api_v1_user, {})
+     def get_appointment
+      @user_with_appointment = User.find(params[:user_id])
     end
 end
